[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "instances-api-client"
version = "1.0.0"
description = "A type-safe Python client for the Vantage Instances API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Vantage", email = "support@vantage.sh" },
]
keywords = [
    "aws",
    "azure",
    "cloud",
    "ec2",
    "gcp",
    "instances",
    "pricing",
    "vantage",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.2",
    "responses>=0.25",
]

[project.urls]
Homepage = "https://instances.vantage.sh"
Documentation = "https://github.com/vantage-sh/instances-api-client"
Repository = "https://github.com/vantage-sh/instances-api-client"
Changelog = "https://github.com/vantage-sh/instances-api-client/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/instances_api_client"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["instances_api_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
