[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "instances-api-client"
version = "1.0.1"
description = "A type-safe Python client for the Vantage Instances API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Vantage", email = "support@vantage.sh" },
]
keywords = [
    "aws",
    "azure",
    "cloud",
    "ec2",
    "gcp",
    "instances",
    "pricing",
    "vantage",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://instances.vantage.sh"
Documentation = "https://github.com/vantage-sh/instances-api-client"
Repository = "https://github.com/vantage-sh/instances-api-client"
Changelog = "https://github.com/vantage-sh/instances-api-client/blob/main/CHANGELOG.md"
